utilities-dev/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:20:07Z"
    labels:
      app: indicadores-dev
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: indicadores-dev
    namespace: utilities-dev
    resourceVersion: "6313116"
    uid: 52c55056-6fd5-488b-9f64-3b8ef22abcc2
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:20:07Z"
    labels:
      app: publico-dev
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: publico-dev
    namespace: utilities-dev
    resourceVersion: "476624676"
    uid: 19b92c04-f533-4784-a9ee-e7185323d648
  subsets:
  - addresses:
    - ip: 10.128.23.10
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: publico-dev-1-vc47z
        namespace: utilities-dev
        resourceVersion: "476624673"
        uid: f7c4b82a-4637-45d1-a874-90656ce459bf
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:20:07Z"
    labels:
      app: s2i-nestjs
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: s2i-nestjs
    namespace: utilities-dev
    resourceVersion: "6313120"
    uid: 32a1ab3a-69cd-4045-af38-0a8869bcfd4a
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:20:07Z"
    labels:
      app: test-nestjs-ab
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-ab
    namespace: utilities-dev
    resourceVersion: "472847157"
    uid: 702138d3-ceb9-41ca-839d-5acf147bb7c8
  subsets:
  - addresses:
    - ip: 10.128.20.17
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: test-nestjs-ab-1-p59kt
        namespace: utilities-dev
        resourceVersion: "472847155"
        uid: 2033a788-d05e-4ef1-8a50-731afc713667
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:20:07Z"
    labels:
      app: test-nestjs-new-private
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-new-private
    namespace: utilities-dev
    resourceVersion: "6313127"
    uid: 8a1776df-6340-4b5b-8cc3-317f57aa12ca
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:20:07Z"
    labels:
      app: test-nestjs-private
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-private
    namespace: utilities-dev
    resourceVersion: "476625010"
    uid: a38b9b4b-ec45-4e55-a939-e4bca6c98761
  subsets:
  - addresses:
    - ip: 10.130.20.112
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: test-nestjs-private-1-q9dzl
        namespace: utilities-dev
        resourceVersion: "476625009"
        uid: 5fff86d3-ec0f-433d-a71c-63e0352e4673
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:20:07Z"
    labels:
      app: test-nestjs-x
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-x
    namespace: utilities-dev
    resourceVersion: "476624648"
    uid: 8a9db328-4803-45f2-b4e8-e79f1106fbfe
  subsets:
  - addresses:
    - ip: 10.128.23.9
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: test-nestjs-x-1-s7t9g
        namespace: utilities-dev
        resourceVersion: "476624645"
        uid: f2e05e2e-7201-48a9-a718-356aab8cb989
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:20:07Z"
    labels:
      app: test-reg-civil
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-reg-civil
    namespace: utilities-dev
    resourceVersion: "472847019"
    uid: e5d90e1b-732a-4b10-994b-36d135cb0197
  subsets:
  - addresses:
    - ip: 10.128.20.15
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: test-reg-civil-1-65cps
        namespace: utilities-dev
        resourceVersion: "472847017"
        uid: df8761a7-bd2e-4b09-873b-522268d43df3
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
