utilities-dev/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:20:09Z"
    generateName: indicadores-dev-
    generation: 1
    labels:
      app: indicadores-dev
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: indicadores-dev
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: indicadores-dev-x762k
    namespace: utilities-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: indicadores-dev
      uid: d7397d86-7cdc-4ff9-9f4d-c3e942530b63
    resourceVersion: "476066966"
    uid: 4db4044e-aaca-4eab-bef1-a5cb3687a8b1
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.23.10
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: publico-dev-1-vc47z
      namespace: utilities-dev
      resourceVersion: "476624673"
      uid: f7c4b82a-4637-45d1-a874-90656ce459bf
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:20:09Z"
    generateName: publico-dev-
    generation: 30
    labels:
      app: publico-dev
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: publico-dev
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: publico-dev-6qjv7
    namespace: utilities-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: publico-dev
      uid: 19d6ef74-dfd7-4fbe-988e-e1c8198b228f
    resourceVersion: "476624675"
    uid: d312c6a2-b8c3-4de0-9e40-dc71a428fcf8
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:20:09Z"
    generateName: s2i-nestjs-
    generation: 1
    labels:
      app: s2i-nestjs
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: s2i-nestjs
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: s2i-nestjs-lp26j
    namespace: utilities-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: s2i-nestjs
      uid: be0fb8e6-d2fb-4092-9c16-cfc5d2c3b7ef
    resourceVersion: "476054083"
    uid: a8216362-7bba-4c0c-9324-aea29d2bc9bf
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.20.17
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
    targetRef:
      kind: Pod
      name: test-nestjs-ab-1-p59kt
      namespace: utilities-dev
      resourceVersion: "472847155"
      uid: 2033a788-d05e-4ef1-8a50-731afc713667
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:20:09Z"
    generateName: test-nestjs-ab-
    generation: 50
    labels:
      app: test-nestjs-ab
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: test-nestjs-ab
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-ab-mt4cd
    namespace: utilities-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: test-nestjs-ab
      uid: 5e4b6e59-e28d-45c7-acc2-a83afb871078
    resourceVersion: "472847159"
    uid: 3f4ef2db-d997-464c-9dbf-b5c51346ef1a
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:20:09Z"
    generateName: test-nestjs-new-private-
    generation: 1
    labels:
      app: test-nestjs-new-private
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: test-nestjs-new-private
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-new-private-b8q2f
    namespace: utilities-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: test-nestjs-new-private
      uid: 2424dcbd-e4ed-47c4-8836-899c50b636c9
    resourceVersion: "476054048"
    uid: ab6cf3f1-d9ae-4521-af3b-b349e9ddb457
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.20.112
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: test-nestjs-private-1-q9dzl
      namespace: utilities-dev
      resourceVersion: "476625009"
      uid: 5fff86d3-ec0f-433d-a71c-63e0352e4673
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:20:09Z"
    generateName: test-nestjs-private-
    generation: 30
    labels:
      app: test-nestjs-private
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: test-nestjs-private
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-private-pz9gt
    namespace: utilities-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: test-nestjs-private
      uid: 95550310-e5df-4873-8e35-5c0faf0a8c5e
    resourceVersion: "476625011"
    uid: ec76b11b-17ac-4020-ba00-b306d0fb3122
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.23.9
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: test-nestjs-x-1-s7t9g
      namespace: utilities-dev
      resourceVersion: "476624645"
      uid: f2e05e2e-7201-48a9-a718-356aab8cb989
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:20:09Z"
    generateName: test-nestjs-x-
    generation: 30
    labels:
      app: test-nestjs-x
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: test-nestjs-x
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-x-rlrrq
    namespace: utilities-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: test-nestjs-x
      uid: 47ee24dc-c42d-411a-a6b2-f2c7f73431a7
    resourceVersion: "476624649"
    uid: 5efa88d9-213b-4d88-a710-cf29c45672c7
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.20.15
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
    targetRef:
      kind: Pod
      name: test-reg-civil-1-65cps
      namespace: utilities-dev
      resourceVersion: "472847017"
      uid: df8761a7-bd2e-4b09-873b-522268d43df3
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:20:09Z"
    generateName: test-reg-civil-
    generation: 48
    labels:
      app: test-reg-civil
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: test-reg-civil
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-reg-civil-zhrkh
    namespace: utilities-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: test-reg-civil
      uid: 3a69e6db-e776-4c7a-a52c-549f859f2be0
    resourceVersion: "472847020"
    uid: 0f598a57-7237-4c0d-bc9b-0b8d9ed69380
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
