utilities-dev/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: indicadores-dev
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: indicadores-dev
    namespace: utilities-dev
    resourceVersion: "22595995"
    uid: 9c014af4-3e1a-4c17-885e-bf9fc74207dd
  spec:
    host: indicadores-dev-utilities-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: indicadores-dev
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:08:31Z"
        status: "True"
        type: Admitted
      host: indicadores-dev-utilities-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: publico-dev
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: publico-dev
    namespace: utilities-dev
    resourceVersion: "22596147"
    uid: 7853b73b-1390-4242-b101-2e6565876d88
  spec:
    host: publico-dev-utilities-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: publico-dev
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:08:47Z"
        status: "True"
        type: Admitted
      host: publico-dev-utilities-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: s2i-nestjs
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: s2i-nestjs
    namespace: utilities-dev
    resourceVersion: "22596328"
    uid: 0198c0d9-16fa-4ed0-88ff-b3163573f97f
  spec:
    host: s2i-nestjs-utilities-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: s2i-nestjs
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:09:04Z"
        status: "True"
        type: Admitted
      host: s2i-nestjs-utilities-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: test-nestjs-private
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-private
    namespace: utilities-dev
    resourceVersion: "22596478"
    uid: 8bc22e81-81b4-452e-bb79-5bafc36a1a99
  spec:
    host: test-nestjs-private-utilities-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: test-nestjs-private
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:09:21Z"
        status: "True"
        type: Admitted
      host: test-nestjs-private-utilities-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: test-reg-civil
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-reg-civil
    namespace: utilities-dev
    resourceVersion: "22596631"
    uid: fecd1e27-e87e-47dd-85de-3e7cd4b37d27
  spec:
    host: test-reg-civil-utilities-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: test-reg-civil
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:09:37Z"
        status: "True"
        type: Admitted
      host: test-reg-civil-utilities-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
