utilities-dev/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: indicadores-dev
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: indicadores-dev
    namespace: utilities-dev
    resourceVersion: "6313207"
    uid: d7397d86-7cdc-4ff9-9f4d-c3e942530b63
  spec:
    clusterIP: 172.30.136.168
    clusterIPs:
    - 172.30.136.168
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: indicadores-dev
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: publico-dev
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: publico-dev
    namespace: utilities-dev
    resourceVersion: "6313210"
    uid: 19d6ef74-dfd7-4fbe-988e-e1c8198b228f
  spec:
    clusterIP: 172.30.24.185
    clusterIPs:
    - 172.30.24.185
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: publico-dev
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: s2i-nestjs
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: s2i-nestjs
    namespace: utilities-dev
    resourceVersion: "6313216"
    uid: be0fb8e6-d2fb-4092-9c16-cfc5d2c3b7ef
  spec:
    clusterIP: 172.30.204.160
    clusterIPs:
    - 172.30.204.160
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: s2i-nestjs
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: test-nestjs-ab
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-ab
    namespace: utilities-dev
    resourceVersion: "6313221"
    uid: 5e4b6e59-e28d-45c7-acc2-a83afb871078
  spec:
    clusterIP: 172.30.172.207
    clusterIPs:
    - 172.30.172.207
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: test-nestjs-ab
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: test-nestjs-new-private
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-new-private
    namespace: utilities-dev
    resourceVersion: "6313226"
    uid: 2424dcbd-e4ed-47c4-8836-899c50b636c9
  spec:
    clusterIP: 172.30.101.34
    clusterIPs:
    - 172.30.101.34
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: test-nestjs-new-private
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: test-nestjs-private
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-private
    namespace: utilities-dev
    resourceVersion: "6313231"
    uid: 95550310-e5df-4873-8e35-5c0faf0a8c5e
  spec:
    clusterIP: 172.30.88.31
    clusterIPs:
    - 172.30.88.31
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: test-nestjs-private
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: test-nestjs-x
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-nestjs-x
    namespace: utilities-dev
    resourceVersion: "6313236"
    uid: 47ee24dc-c42d-411a-a6b2-f2c7f73431a7
  spec:
    clusterIP: 172.30.221.92
    clusterIPs:
    - 172.30.221.92
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: test-nestjs-x
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:20:09Z"
    labels:
      app: test-reg-civil
      migration.openshift.io/migrated-by-migmigration: 6d5b8e4e-6e6a-4858-a8cb-69094aa3de8a
      migration.openshift.io/migrated-by-migplan: fc39346c-f9d4-4b3a-8404-0437309f995a
      velero.io/backup-name: migration-7ff83-initial-fq7dv
      velero.io/restore-name: migration-7ff83-final-jlm4p
    name: test-reg-civil
    namespace: utilities-dev
    resourceVersion: "6313241"
    uid: 3a69e6db-e776-4c7a-a52c-549f859f2be0
  spec:
    clusterIP: 172.30.68.227
    clusterIPs:
    - 172.30.68.227
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: test-reg-civil
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
